# fluent-tkinter

./: CLAUDE.md  LICENSE  pyproject.toml
src/fluent_tkinter/: __init__.py  _patch.py
tests/: conftest.py  test_exhaustive_button.py  test_exhaustive_canvas.py  test_exhaustive_entry.py  test_exhaustive_geometry.py  test_exhaustive_menu.py  test_exhaustive_misc.py  test_exhaustive_panedwindow.py  test_exhaustive_scale_scrollbar.py  test_exhaustive_spinbox.py  test_exhaustive_style.py  test_exhaustive_text.py  test_exhaustive_ttk.py  test_exhaustive_variables.py  test_exhaustive_wm.py  test_fluent.py
tests/cpython_test_tkinter/: __init__.py  test_colorchooser.py  test_font.py  test_geometry_managers.py  test_images.py  test_messagebox.py  test_misc.py  test_simpledialog.py  test_text.py  test_variables.py  test_widgets.py  widget_tests.py
tests/cpython_test_ttk/: __init__.py  test_extensions.py  test_style.py  test_widgets.py
