[project]
name = "fluent-tkinter"
version = "0.1.0"
description = "Monkey patch for Python's tkinter that enables fluent-style method chaining"
requires-python = ">=3.12.3"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluent_tkinter"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-forked>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
